--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "friendsofphp/php-cs-fixer": "^3.40",
     "phpbench/phpbench": "^1.2",
     "phpstan/phpstan": "^1.10",
-    "phpunit/phpunit": "^10.1"
+    "phpunit/phpunit": "^10.5 || ^11.0"
   },
   "scripts": {
     "benchmark": "phpbench run tests/Benchmark --report=aggregate --retry-threshold=5",
