--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,8 @@
     "squidit/php-coding-standards": "^1.0",
     "friendsofphp/php-cs-fixer": "^3.40",
     "phpbench/phpbench": "^1.2",
-    "phpstan/phpstan": "^1.10",
-    "phpunit/phpunit": "^10.5 || ^11.0"
+    "phpstan/phpstan": "^1.11",
+    "phpunit/phpunit": "^11.0"
   },
   "scripts": {
     "benchmark": "phpbench run tests/Benchmark --report=aggregate --retry-threshold=5",
