--- a/.github/workflows/php_unit.yml
+++ b/.github/workflows/php_unit.yml
@@ -40,4 +40,5 @@ jobs:
         run: composer run-script test
 
       - name: "Check coding standards"
+        if: ${{ matrix.php-version != '8.4' }}
         run: "vendor/bin/php-cs-fixer fix -v --dry-run"
