--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,12 @@
     "php": "^8.2"
   },
   "require-dev": {
+    "ext-simdjson": "*",
     "squidit/php-coding-standards": "^2.0",
-    "friendsofphp/php-cs-fixer": "^3.57",
-    "phpbench/phpbench": "^1.2",
+    "friendsofphp/php-cs-fixer": "^3.65",
+    "phpbench/phpbench": "^1.3.1",
     "phpstan/phpstan": "^2.0",
-    "phpunit/phpunit": "^11.1"
+    "phpunit/phpunit": "^11.5"
   },
   "scripts": {
     "benchmark": "phpbench run tests/Benchmark --report=aggregate --retry-threshold=5",
