--- a/.github/workflows/php_unit.yml
+++ b/.github/workflows/php_unit.yml
@@ -30,6 +30,20 @@ jobs:
           ini-values: memory_limit=-1
           tools: composer:v2, cs2pr
 
+      - name: "Install simdjson php extension"
+        run: |
+          git clone --single-branch --depth=1 https://github.com/crazyxman/simdjson_php.git
+          cd simdjson_php
+          phpize
+          ./configure
+          make
+          sudo make install
+
+      - name: "Enable simdjson php extension"
+        run: |
+          PHP_INI_DIR=$(php -r "echo php_ini_loaded_file();")
+          echo "extension=simdjson.so" | sudo tee -a $PHP_INI_DIR
+
       - name: "Validate composer.json and composer.lock"
         run: composer validate
 
