fixed github actions and updated php cs-fixer

--- a/composer.json
+++ b/composer.json
@@ -38,23 +38,36 @@
   "require-dev": {
     "ext-simdjson": "*",
     "squidit/php-coding-standards": "^2.0",
-    "friendsofphp/php-cs-fixer": "^3.65",
+    "friendsofphp/php-cs-fixer": "^3.75",
     "phpbench/phpbench": "^1.3.1",
     "phpstan/phpstan": "^2.0",
     "phpunit/phpunit": "^11.5"
   },
   "scripts": {
     "benchmark": "phpbench run tests/Benchmark --report=aggregate --retry-threshold=5",
-    "check": "phpstan analyse -l 9 src tests",
-    "test": "phpunit --testsuite unit",
-    "test:coverage": [
+    "analyse": "phpstan analyse -l 8 src tests",
+    "cs:fix": "php-cs-fixer fix",
+    "cs:dry-run": "php-cs-fixer fix -v --dry-run",
+    "fix": [
+      "@test:unit:coverage",
+      "@cs:fix",
+      "@analyse"
+    ],
+    "test:cycle": "phpunit --testsuite cycle",
+    "test:unit": "phpunit --testsuite unit",
+    "test:unit:coverage": [
+      "@putenv XDEBUG_MODE=coverage",
+      "phpunit --testsuite unit --coverage-cobertura coverage/coverage.xml",
+      "@test:coverage:remove-source"
+    ],
+    "test:unit:coverage-text": [
       "@putenv XDEBUG_MODE=coverage",
       "phpunit --testsuite unit --coverage-text"
     ],
-    "fix": "php-cs-fixer fix && phpstan analyse -l 9 src tests",
-    "profile": [
-      "@putenv XDEBUG_MODE=profile",
-      "php "
+    "test:coverage:remove-source": [
+      "perl -0777 -i -pe \"s@<sources>.*</sources>@@sg\" ./coverage/coverage.xml",
+      "perl -i -pe 's/filename=\"/filename=\"src\\//gs' ./coverage/coverage.xml",
+      "perl -i -pe 's/ timestamp=\"\\d+\"//gs' ./coverage/coverage.xml"
     ]
   }
 }
