--- a/.github/workflows/php_unit.yml
+++ b/.github/workflows/php_unit.yml
@@ -56,6 +56,7 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: "Check PHP-CS-Fixer coding standards"
+        if: ${{ matrix.php-version != '8.4' }}
         run: composer run-script cs:dry-run
 
       - name: "Run PHPStan"
