--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "friendsofphp/php-cs-fixer": "^3.75",
     "phpbench/phpbench": "^1.3.1",
     "phpstan/phpstan": "^2.0",
-    "phpunit/phpunit": "^11.5 | ^12.0"
+    "phpunit/phpunit": "^11.5"
   },
   "scripts": {
     "benchmark": "phpbench run tests/Benchmark --report=aggregate --retry-threshold=5",
